--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+/* .square {
+  width: 6rem;
+  height: 6rem;
+  font-size: 3rem;
+} */
+
+.square {
+  background: rgb(243, 242, 242);
+  border: 2px solid #999;
+  float: left;
+  font-size: 3.5rem;
+  height: 7rem;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
   text-align: center;
+  width: 7rem;
+}
+.square:hover {
+  background-color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.board {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 30vh;
+}
+
+.salute {
+  font-size: 5rem;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.salute div {
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* background-color: #282c34; */
