--- a/src/App.css
+++ b/src/App.css
@@ -42,13 +42,15 @@
 }
 
 .salute div {
+  font-size: 4rem;
   margin-left: 2rem;
   margin-right: 2rem;
 }
 
 .app {
   background-color: #282c34;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
 }
 
 .homepage {
@@ -78,6 +80,7 @@ input {
   background-color: rgb(29, 202, 144);
   border-radius: 0.2rem;
   color: white;
+  margin-bottom: 2rem;
 }
 
 .error {
@@ -109,4 +112,9 @@ input {
   margin-bottom: 3rem;
   color: white;
   font-size: 1.5rem;
+}
+@media screen and (max-width: 800px) {
+  * {
+    font-size: 11px;
+  }
 }
